Tweak padding in backend template to fix toolbar button alignment

--- a/administrator/templates/atum/scss/template-rtl.scss
+++ b/administrator/templates/atum/scss/template-rtl.scss
@@ -185,7 +185,7 @@ body {
     [class*=' icon-'],
     [class^='#{$fa-css-prefix}-'],
     [class*=' #{$fa-css-prefix}-'] {
-      margin: 0 -22px 0 22px;
+      margin: 0 -27px 0 27px;
     }
   }
 
